# unity-ecsact-wasm-bazel-template

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
Assets/: SystemImpls.wasm  example.ecsact  example.ecsact.cs
Assets/Editor/: UnityBazelSettings.asset
Assets/EntityBehaviours/: SyncEntityPosition.cs
Assets/Resources/Settings/: EcsactRuntimeSettings.asset  EcsactWasmRuntimeSettings.asset
Assets/Scenes/: SampleScene.unity
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
SystemImpls/: Attack.cc  BUILD.bazel  Gravity.cc
