load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ecsact_runtime",
    sha256 = "e86c1957581abf85fb88dc45fa220334afb0c9b8796346c8ea571aea9eaac401",
    strip_prefix = "ecsact_runtime-2677d3953f5d9693ac580b9dcdd8fc40289770a8",
    url = "https://github.com/ecsact-dev/ecsact_runtime/archive/2677d3953f5d9693ac580b9dcdd8fc40289770a8.zip",
)

http_archive(
    name = "ecsact_lang_cpp",
    sha256 = "a9276303533a24e55ab7245c8fc2999597f75d86e2da09467e494415cdad9ca2",
    strip_prefix = "ecsact_lang_cpp-e76f35fbdd06d1f94b53663f704559993421ceb7",
    url = "https://github.com/ecsact-dev/ecsact_lang_cpp/archive/e76f35fbdd06d1f94b53663f704559993421ceb7.zip",
)

http_archive(
    name = "rules_ecsact",
    sha256 = "54932ce1329ea75e9e24d3bae81c9f991f393b43a63fea9ec17f70c27e179d54",
    strip_prefix = "rules_ecsact-0.1.7",
    url = "https://github.com/ecsact-dev/rules_ecsact/archive/refs/tags/0.1.7.tar.gz",
)

load("@rules_ecsact//ecsact:repositories.bzl", "ecsact_register_toolchains", "rules_ecsact_dependencies")

rules_ecsact_dependencies()

ecsact_register_toolchains()

http_archive(
    name = "emsdk",
    sha256 = "28bba9c179854b0f7e548a7adf87173e8cbe098ddfdbe25fa9f5a5875faa0a1a",
    strip_prefix = "emsdk-589dd6a639ff428852cf998607cf226c5ce12efb/bazel",
    url = "https://github.com/zaucy/emsdk/archive/589dd6a639ff428852cf998607cf226c5ce12efb.zip",
)

load("@emsdk//:deps.bzl", emsdk_deps = "deps")

emsdk_deps()

load("@emsdk//:emscripten_deps.bzl", emsdk_emscripten_deps = "emscripten_deps")

emsdk_emscripten_deps()

load("@emsdk//:toolchains.bzl", "register_emscripten_toolchains")

register_emscripten_toolchains()

http_archive(
    name = "hedron_compile_commands",
    sha256 = "f01636585c3fb61c7c2dc74df511217cd5ad16427528ab33bc76bb34535f10a1",
    strip_prefix = "bazel-compile-commands-extractor-a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/a14ad3a64e7bf398ab48105aaa0348e032ac87f8.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()
